--- a/src/app/pokemon/detail-pokemon/detail-pokemon.component.html
+++ b/src/app/pokemon/detail-pokemon/detail-pokemon.component.html
@@ -48,10 +48,13 @@
         </div>
         <div class="card-action">
           <a (click)="goToPokemonList()">Retour</a>
-          <!-- <a (click)="goToEditPokemon(pokemon)">Editer</a> -->
+          <a (click)="goToEditPokemon(pokemon)">Éditer</a>
+          <a (click)="deletePokemon(pokemon)">Supprimer</a>
         </div>
       </div>
     </div>
   </div>
 </div>
-<h4 *ngIf="!pokemon" class="center">Aucun pokémon à afficher !</h4>
+<h4 *ngIf="!pokemon" class="center">
+  <app-loader></app-loader>
+</h4>
