--- a/src/app/pokemon/list-pokemon/list-pokemon.component.html
+++ b/src/app/pokemon/list-pokemon/list-pokemon.component.html
@@ -1,5 +1,6 @@
 <div class="container">
   <div class="row">
+    <app-search-pokemon></app-search-pokemon>
     <div *ngFor="let pokemon of pokemonList" class="col m4 s6">
       <div
         (click)="goToPokemon(pokemon)"
@@ -26,3 +27,10 @@
     </div>
   </div>
 </div>
+
+<a
+  class="btn-floating btn-large waves-effect waves-light red z-depth-3"
+  style="position: fixed; bottom: 25px; right: 25px"
+  routerLink="/pokemon/add"
+  >➕</a
+>
